--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
       </div>
     </div>
     <div class="container">
-      <div class="offer">
-        <div class="offer_item1"><a href="#"><img src="img/offer1.png" alt="forwomen"></a></div>
-        <div class="offer_item2"> <a href="#"><img src="img/offer2.png" alt="formen"></a></div>
-        <div class="offer_item3"><a href="#"></a><img src="img/offer3.png" alt="forkids"></div>
-        <div class="offer_item4"><a href="#"></a><img src="img/offer4.png" alt="accesorios"></div>
-      </div>
+      <div class="offer"><a href="#">
+          <div class="offer_item1"></div></a><a href="#">
+          <div class="offer_item2"> </div></a><a href="#">
+          <div class="offer_item3"></div></a><a href="#">           
+          <div class="offer_item4"></div></a></div>
     </div>
     <div class="products"> </div>
   </body>
