--- a/index.html
+++ b/index.html
@@ -15,16 +15,24 @@
   <body> 
     <div class="header"> 
       <div class="container"> 
-        <div class="menu">
-          <ul class="menu_left">
-            <li class="logo"><a href="index.html"><img src="img/header_logo.svg" alt="logo"></a></li>
-            <li class="search"><a href="#"><img src="img/header_search.svg" alt="search"></a></li>
-          </ul>
-          <ul class="menu_right">
-            <li class="menu_list"><a href="#"><img src="img/header_menu.svg" alt="menu"></a></li>
-            <li class="profile"><a href="#"><img src="img/header_profile.svg" alt="profile"></a></li>
-            <li class="shop"><a href="#"><img src="img/header_shop.svg" alt="shop"></a></li>
-          </ul>
+        <div class="nav-header">
+          <div class="nav-header_left">
+            <div class="logo"><a href="index.html"><img src="img/header_logo.svg" alt="logo"></a></div>
+            <div class="search"><a href="#"><img src="img/header_search.svg" alt="search"></a></div>
+          </div>
+          <div class="nav-header_right">
+            <div class="menu_list"><a href="#"><img src="img/header_menu.svg" alt="menu"></a>
+              <div class="menu-box"> 
+                <div class="menu-button-exit"><img class="menu-exit" src="img/exit.svg" alt="X"></div>
+                <h2 class="menu-heading">Menu </h2>
+                <h3 class="menu-heading-sec">Man </h3><a class="munu-link" href="#">Accesories</a><a class="munu-link" href="#">Bags</a><a class="munu-link" href="#">Denim</a><a class="munu-link" href="#">T-Shirts</a>
+                <h3 class="menu-heading-sec">Woman </h3><a class="munu-link" href="#">Accesories</a><a class="munu-link" href="#">Jackets & Coats</a><a class="munu-link" href="#">Polos</a><a class="munu-link" href="#">T-Shirts</a><a class="munu-link" href="#">Shirts</a>
+                <h3 class="menu-heading-sec">KIDS </h3><a class="munu-link" href="#">Accesories</a><a class="munu-link" href="#">Jackets & Coats</a><a class="munu-link" href="#">Polos</a><a class="munu-link" href="#">T-Shirts</a><a class="munu-link" href="#">Shirts</a><a class="munu-link" href="#">Bags</a>
+              </div>
+            </div>
+            <div class="profile"><a href="#"><img src="img/header_profile.svg" alt="profile"></a></div>
+            <div class="shop"><a href="#"><img src="img/header_shop.svg" alt="shop"></a></div>
+          </div>
         </div>
       </div>
     </div>
@@ -44,12 +52,130 @@
       </div>
     </div>
     <div class="container">
-      <div class="offer"><a href="#">
-          <div class="offer_item1"></div></a><a href="#">
-          <div class="offer_item2"> </div></a><a href="#">
-          <div class="offer_item3"></div></a><a href="#">           
-          <div class="offer_item4"></div></a></div>
+      <div class="offer"><a class="ofer_item_link" href="#">
+          <div class="offer_item1">
+            <p class="offer_item1_text">30% OFF</p>
+            <h3 class="offer_heading">FOR WOMEN</h3>
+          </div></a><a class="ofer_item_link" href="#">
+          <div class="offer_item2">
+            <p class="offer_item1_text">HOT DEAL</p>
+            <h3 class="offer_heading">FOR MEN </h3>
+          </div></a><a class="ofer_item_link" href="#">
+          <div class="offer_item3">
+            <p class="offer_item1_text">NEW ARRIVALS</p>
+            <h3 class="offer_heading">FOR KIDS</h3>
+          </div></a><a class="ofer_item_link" href="#">           
+          <div class="offer_item4">
+            <p class="offer_item1_text">LUXERIOUS & TRENDY</p>
+            <h3 class="offer_heading">ACCESORIES</h3>
+          </div></a></div>
     </div>
-    <div class="products"> </div>
+    <section class="products">
+      <div class="container"> 
+        <div class="product-header"> 
+          <h2 class="product-heading">Fetured Items </h2>
+          <p class="product-text">Shop for items based on what we featured in this week</p>
+        </div>
+        <div class="product-cards">
+          <div class="product-card">       <a class="product-link" href="#"><img class="img-product" src="img/product1.png" alt="product">
+              <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="product-price">$52.00</p></a>
+            <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
+                <p class="add-txt">Add to Cart</p></a></div>
+          </div>
+          <div class="product-card"><a class="product-link" href="#"> <img class="img-product" src="img/product2.png" alt="product">
+              <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="product-price">$52.00</p></a>
+            <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
+                <p class="add-txt">Add to Cart</p></a></div>
+          </div>
+          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/product3.png" alt="product">
+              <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="product-price">$52.00</p></a>
+            <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
+                <p class="add-txt">Add to Cart</p></a></div>
+          </div>
+          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/product4.png" alt="product">
+              <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="product-price">$52.00</p></a>
+            <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
+                <p class="add-txt">Add to Cart</p></a></div>
+          </div>
+          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/product5.png" alt="product">
+              <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="product-price">$52.00</p></a>
+            <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
+                <p class="add-txt">Add to Cart</p></a></div>
+          </div>
+          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/product6.png" alt="product">
+              <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="product-price">$52.00</p></a>
+            <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
+                <p class="add-txt">Add to Cart</p></a></div>
+          </div>
+        </div>
+        <div class="product-button-box"> 
+          <button class="product-button">Browse All Product</button>
+        </div>
+      </div>
+    </section>
+    <div class="feature"> 
+      <div class="container">
+        <div class="feature-items"> 
+          <div class="feature-item-delivery"><img class="feature-icon" src="img/feature1.svg" alt="icon">
+            <h3 class="feature-heading">Free Delivery</h3>
+            <p class="feature-text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models. </p>
+          </div>
+          <div class="feature-item-delivery"><img src="img/feature2.svg" alt="icon">
+            <h3 class="feature-heading">Sales & disconts</h3>
+            <p class="feature-text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models. </p>
+          </div>
+          <div class="feature-item-delivery"><img src="img/feature3.svg" alt="icon">
+            <h3 class="feature-heading">Quality assurance</h3>
+            <p class="feature-text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models. </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="footer-autor">
+        <div class="container">
+          <div class="footer-autor-subscribe"> 
+            <div class="foroter-autor-subscribe-left">
+              <figure class="figure-autor"> <img src="./img/subscribe_info.png" alt="author-img">
+                <figcaption class="figcaption-subscribe">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</figcaption>
+              </figure>
+            </div>
+            <div class="foroter-autor-subscribe-right"> 
+              <h3 class="subscribe-heading">SUBSCRIBE</h3>
+              <p class="subscribe-text">FOR OUR NEWLETTER AND PROMOTION</p>
+              <input class="input-email" type="email" placeholder="Enter Your Email">
+              <button class="button-email">Subscribe </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+          <div class="footer-copyright-info"> 
+            <div class="footer-copyright-info-left">
+              <p class="copyright-text">© 2021 Brand All Rights Reserved.</p>
+            </div>
+            <div class="footer-copyright-info-right"> 
+              <div class="social-facebook social-icon"> <img src="./img/social_icon1.svg" alt="social icon"></div>
+              <div class="social-instagram social-icon"> <img src="./img/social_icon2.svg" alt="social icon"></div>
+              <div class="social-pinterest social-icon"> <img src="./img/social_icon3.svg" alt="social icon"></div>
+              <div class="social-twitter social-icon"><img src="./img/social_icon4.svg" alt="social icon"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
