--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title> Главная страница
+    <title> Каталог
     </title>
     <meta name="description" content="Описание страницы">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,91 +34,129 @@
         </div>
       </div>
     </div>
-    <div class="top">
+    <div class="breadcrump-back">
       <div class="container">
-        <div class="content"> 
-          <div class="content_left"><img src="img/top.png" alt="top"></div>
-          <div class="content_right">
-            <div class="banner"><span class="line"></span>
-              <div class="banner_text"> 
-                <p class="banner_one">THE BRAND</p>
-                <p class="banner_two">OF LUXERIOS US <span class="banner_three">FASION</span></p>
-              </div>
+        <div class="nav-breadcrump"> 
+          <h2 class="breadcrump-left uppercase-text">New arrivals</h2>
+          <div class="breadcrump-right"> <a class="text-link-catalog uppercase-text" href="index.html">HOME</a><span class="text-link-catalog sep">/</span><a class="text-link-catalog uppercase-text" href="#">MEN</a><span class="text-link-catalog sep">/</span><a class="text-link-catalog uppercase-text text-pink" href="#">New Arriwals</a></div>
+        </div>
+      </div>
+    </div>
+    <div class="filter-bag">
+      <div class="container"> 
+        <div class="filter">
+          <div class="filter-left"> 
+            <p class="filter-add-txt uppercase-text">filter</p><img class="img-add" src="img/filter_add.svg" alt="filter">
+            <div class="menu-hight"> </div>
+          </div>
+          <div class="filter-center"> 
+            <div class="temp1"> 
+              <details> 
+                <summary class="tempt1 uppercase-text"> </summary>
+              </details>
+            </div>
+            <div class="temp2">
+              <details> 
+                <summary class="tempt2 uppercase-text"></summary>
+                <div class="filter-hight">
+                  <form class="filter-size" action="#">
+                    <label for="sizexs"> 
+                      <input id="sizexs" type="checkbox">XS
+                    </label>
+                    <label for="sizes">
+                      <input id="sizes" type="checkbox">S  
+                    </label>
+                    <label for="sizem">
+                      <input id="sizem" type="checkbox">M  
+                    </label>
+                    <label for="sizel">
+                      <input id="sizel" type="checkbox">L  
+                    </label>
+                  </form>
+                </div>
+              </details>
+            </div>
+            <div class="temp3"> 
+              <details> 
+                <summary class="tempt3 uppercase-text"> </summary>
+              </details>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="offer"><a class="ofer_item_link" href="#">
-          <div class="offer_item1">
-            <p class="offer_item1_text">30% OFF</p>
-            <h3 class="offer_heading">FOR WOMEN</h3>
-          </div></a><a class="ofer_item_link" href="#">
-          <div class="offer_item2">
-            <p class="offer_item1_text">HOT DEAL</p>
-            <h3 class="offer_heading">FOR MEN </h3>
-          </div></a><a class="ofer_item_link" href="#">
-          <div class="offer_item3">
-            <p class="offer_item1_text">NEW ARRIVALS</p>
-            <h3 class="offer_heading">FOR KIDS</h3>
-          </div></a><a class="ofer_item_link" href="#">           
-          <div class="offer_item4">
-            <p class="offer_item1_text">LUXERIOUS & TRENDY</p>
-            <h3 class="offer_heading">ACCESORIES</h3>
-          </div></a></div>
-    </div>
-    <div class="products">
+    <div class="products-bag">
       <div class="container"> 
-        <div class="product-header"> 
-          <h2 class="product-heading">Fetured Items </h2>
-          <p class="product-text">Shop for items based on what we featured in this week</p>
-        </div>
         <section class="product-cards">
-          <div class="product-card">       <a class="product-link" href="#"><img class="img-product" src="img/product1.png" alt="product">
+          <div class="product-card">       <a class="product-link" href="#"><img class="img-product" src="img/catalog_product1.png" alt="product">
               <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
               <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="product-price">$52.00</p></a>
             <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
                 <p class="add-txt">Add to Cart</p></a></div>
           </div>
-          <div class="product-card"><a class="product-link" href="#"> <img class="img-product" src="img/product2.png" alt="product">
+          <div class="product-card"><a class="product-link" href="#"> <img class="img-product" src="img/catalog_product2.png" alt="product">
               <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
               <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="product-price">$52.00</p></a>
             <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
                 <p class="add-txt">Add to Cart</p></a></div>
           </div>
-          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/product3.png" alt="product">
+          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/catalog_product3.png" alt="product">
               <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
               <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="product-price">$52.00</p></a>
             <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
                 <p class="add-txt">Add to Cart</p></a></div>
           </div>
-          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/product4.png" alt="product">
+          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/catalog_product4.png" alt="product">
               <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
               <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="product-price">$52.00</p></a>
             <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
                 <p class="add-txt">Add to Cart</p></a></div>
           </div>
-          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/product5.png" alt="product">
+          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/catalog_product5.png" alt="product">
               <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
               <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="product-price">$52.00</p></a>
             <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
                 <p class="add-txt">Add to Cart</p></a></div>
           </div>
-          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/product6.png" alt="product">
+          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/catalog_product6.png" alt="product">
               <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
               <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
               <p class="product-price">$52.00</p></a>
             <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
                 <p class="add-txt">Add to Cart</p></a></div>
           </div>
-        </section><a class="product-button-box" href="#">
-          <button class="product-button">Browse All Product</button></a>
+          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/catalog_product7.png" alt="product">
+              <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="product-price">$52.00</p></a>
+            <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
+                <p class="add-txt">Add to Cart</p></a></div>
+          </div>
+          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/catalog_product8.png" alt="product">
+              <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="product-price">$52.00</p></a>
+            <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
+                <p class="add-txt">Add to Cart</p></a></div>
+          </div>
+          <div class="product-card"><a class="product-link" href="#"><img class="img-product" src="img/catalog_product9.png" alt="product">
+              <h3 class="card-heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card-text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="product-price">$52.00</p></a>
+            <div class="add-box"> <a class="add" href="#"><img class="basket-add" src="img/product_hover.svg" alt="cart">
+                <p class="add-txt">Add to Cart</p></a></div>
+          </div>
+        </section>
+      </div>
+    </div>
+    <div class="pagination-bag">
+      <div class="container"> 
+        <div class="pagination"> <a class="pagination-elem" href="#"><</a><a class="pagination-elem pag-red" href="#">1</a><a class="pagination-elem" href="#">2</a><a class="pagination-elem" href="#">3</a><a class="pagination-elem" href="#">4</a><a class="pagination-elem" href="#">5</a><a class="pagination-elem" href="#">6...</a><a class="pagination-elem" href="#">20</a><a class="pagination-elem" href="#">></a></div>
       </div>
     </div>
     <div class="feature"> 
